# cc2024_crashy

./: .gitignore  Dockerfile  Makefile  README.md  crashy.py  eval_prompt.py  exif.py  llm.py  model.py  prompt.py  pyproject.toml  requirements.txt  trial.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
doc/: slides.md
