[tool.poetry]
name = "codecamp2024"
version = "0.1.0"
description = ""
authors = ["Patrick Ritter <patrick.ritter@epost.ch>"]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.52.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
