[project]
name = "codecamp2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kagglehub>=0.3.3",
    "openai>=1.52.2",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.7.1",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D212"]
