[project]
name = "codecamp2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kagglehub>=0.3.3",
    "openai>=1.52.2",
    "streamlit>=1.39.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.7.1",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D212", "COM812", "ISC001"]

[[tool.mypy.overrides]]
module = "kagglehub.*"
ignore_missing_imports = true
